--- a/elegant-objects/src/main/scala/chapter2.ipynb
+++ b/elegant-objects/src/main/scala/chapter2.ipynb
@@ -62,7 +62,7 @@
     {
      "data": {
       "text/plain": [
-       "defined \u001b[32mclass\u001b[39m \u001b[36mDocument\u001b[39m"
+       "defined \u001B[32mclass\u001B[39m \u001B[36mDocument\u001B[39m"
       ]
      },
      "execution_count": 1,
@@ -102,13 +102,13 @@
     {
      "data": {
       "text/plain": [
-       "defined \u001b[32mclass\u001b[39m \u001b[36mDocumentProblem\u001b[39m\n",
-       "defined \u001b[32mclass\u001b[39m \u001b[36mDocument\u001b[39m\n",
-       "defined \u001b[32mclass\u001b[39m \u001b[36mOutputPipe\u001b[39m\n",
-       "\u001b[36mdoc\u001b[39m: \u001b[32mDocument\u001b[39m = ammonite.$sess.cmd1$Helper$Document@58e67ec3\n",
-       "\u001b[36mpipe\u001b[39m: \u001b[32mOutputPipe\u001b[39m = ammonite.$sess.cmd1$Helper$OutputPipe@3a133558\n",
-       "\u001b[36mbytesWritten\u001b[39m: \u001b[32mInt\u001b[39m = \u001b[32m42\u001b[39m\n",
-       "\u001b[36mtimeElapsed\u001b[39m: \u001b[32mLong\u001b[39m = \u001b[32m123L\u001b[39m"
+       "defined \u001B[32mclass\u001B[39m \u001B[36mDocumentProblem\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mDocument\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mOutputPipe\u001B[39m\n",
+       "\u001B[36mdoc\u001B[39m: \u001B[32mDocument\u001B[39m = ammonite.$sess.cmd1$Helper$Document@58e67ec3\n",
+       "\u001B[36mpipe\u001B[39m: \u001B[32mOutputPipe\u001B[39m = ammonite.$sess.cmd1$Helper$OutputPipe@3a133558\n",
+       "\u001B[36mbytesWritten\u001B[39m: \u001B[32mInt\u001B[39m = \u001B[32m42\u001B[39m\n",
+       "\u001B[36mtimeElapsed\u001B[39m: \u001B[32mLong\u001B[39m = \u001B[32m123L\u001B[39m"
       ]
      },
      "execution_count": 1,
@@ -308,12 +308,12 @@
     {
      "data": {
       "text/plain": [
-       "defined \u001b[32mclass\u001b[39m \u001b[36mDatabase\u001b[39m\n",
-       "defined \u001b[32mclass\u001b[39m \u001b[36mConnection\u001b[39m\n",
-       "defined \u001b[32mclass\u001b[39m \u001b[36mStatistics\u001b[39m\n",
-       "\u001b[36mdb\u001b[39m: \u001b[32mDatabase\u001b[39m = ammonite.$sess.cmd2$Helper$Database@87065b0\n",
-       "\u001b[36mconn\u001b[39m: \u001b[32mConnection\u001b[39m = ammonite.$sess.cmd2$Helper$Connection@13a93ecd\n",
-       "\u001b[36mstats\u001b[39m: \u001b[32mStatistics\u001b[39m = ammonite.$sess.cmd2$Helper$Statistics@6aacd07a"
+       "defined \u001B[32mclass\u001B[39m \u001B[36mDatabase\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mConnection\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mStatistics\u001B[39m\n",
+       "\u001B[36mdb\u001B[39m: \u001B[32mDatabase\u001B[39m = ammonite.$sess.cmd2$Helper$Database@87065b0\n",
+       "\u001B[36mconn\u001B[39m: \u001B[32mConnection\u001B[39m = ammonite.$sess.cmd2$Helper$Connection@13a93ecd\n",
+       "\u001B[36mstats\u001B[39m: \u001B[32mStatistics\u001B[39m = ammonite.$sess.cmd2$Helper$Statistics@6aacd07a"
       ]
      },
      "execution_count": 2,
@@ -384,39 +384,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
    "id": "852b19bb47926733",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-25T11:52:32.616177Z",
-     "start_time": "2025-06-25T11:52:32.266351Z"
+     "end_time": "2025-08-28T13:06:26.345514Z",
+     "start_time": "2025-08-28T13:06:25.052629Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The file is empty\n",
-      "The file can be read\n",
-      "User is an adult\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "defined \u001b[32mclass\u001b[39m \u001b[36mFile\u001b[39m\n",
-       "defined \u001b[32mclass\u001b[39m \u001b[36mUser\u001b[39m\n",
-       "\u001b[36mfile\u001b[39m: \u001b[32mFile\u001b[39m = ammonite.$sess.cmd5$Helper$File@54f61aae\n",
-       "\u001b[36muser\u001b[39m: \u001b[32mUser\u001b[39m = \u001b[33mUser\u001b[39m(name = \u001b[32m\"John\"\u001b[39m, age = \u001b[32m25\u001b[39m)\n",
-       "\u001b[36motherUser\u001b[39m: \u001b[32mUser\u001b[39m = \u001b[33mUser\u001b[39m(name = \u001b[32m\"Jane\"\u001b[39m, age = \u001b[32m30\u001b[39m)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "class File(path: String) {\n",
     "  // Good: Using adjectives for Boolean methods\n",
@@ -472,12 +446,37 @@
     "if (user.equalTo(otherUser)) {\n",
     "  println(\"Users are the same\") // Reads naturally: \"if user is equal to other user\"\n",
     "}\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file is empty\n",
+      "The file can be read\n",
+      "User is an adult\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mFile\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mUser\u001B[39m\n",
+       "\u001B[36mfile\u001B[39m: \u001B[32mFile\u001B[39m = ammonite.$sess.cmd1$Helper$File@782f660d\n",
+       "\u001B[36muser\u001B[39m: \u001B[32mUser\u001B[39m = \u001B[33mUser\u001B[39m(name = \u001B[32m\"John\"\u001B[39m, age = \u001B[32m25\u001B[39m)\n",
+       "\u001B[36motherUser\u001B[39m: \u001B[32mUser\u001B[39m = \u001B[33mUser\u001B[39m(name = \u001B[32m\"Jane\"\u001B[39m, age = \u001B[32m30\u001B[39m)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 1
   },
   {
-   "cell_type": "markdown",
-   "id": "5a031a7af7aadf47",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "## Summary of Boolean Method Naming Rules\n",
     "\n",
@@ -492,8 +491,94 @@
     "   - `equalTo(obj)` instead of `equals(obj)`\n",
     "   - `present()` instead of `exists()`\n",
     "\n",
-    "This naming convention makes conditionals read more naturally, as the Boolean methods essentially answer the question \"is this object [adjective]?\"\n"
-   ]
+    "This naming convention makes conditionals read more naturally, as the Boolean methods essentially answer the question \"is this object [adjective]?\""
+   ],
+   "id": "3cc49e09fad9c78f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 2.5 Don't use public constants\n",
+    "\n",
+    "Public constants create global coupling and reduce cohesion.\n",
+    "Prefer keeping values private to the class that uses them, or pass them in as small objects (dependencies) instead of sharing a global constant."
+   ],
+   "id": "f25e28edeacbc292"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-28T13:29:52.372648Z",
+     "start_time": "2025-08-28T13:29:49.216Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "// Bad example: global constant-like object (avoid)\n",
+    "object ConstantsBad {\n",
+    "  val CrLf: String = \"\\r\\n\"\n",
+    "}\n",
+    "\n",
+    "class RowsBad2(private val all: List[String]) {\n",
+    "  def print(p: java.io.PrintStream): Unit = {\n",
+    "    all.foreach { row => p.printf(\"{%s}%s\", row, ConstantsBad.CrLf) }\n",
+    "  }\n",
+    "}"
+   ],
+   "id": "54ee1a9748dea62b",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mobject\u001B[39m \u001B[36mConstantsBad\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mRowsBad2\u001B[39m"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Better alternatives:\n",
+    "\n",
+    "- Keep the value private and local to the class.\n",
+    "- Or encapsulate the value as an object and inject it."
+   ],
+   "id": "3445e185568f9dba"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "class Rows2(private val all: List[String]) {\n",
+    "  private val CrLf: String = \"\\r\\n\"\n",
+    "  def print(p: java.io.PrintStream): Unit =\n",
+    "    all.foreach { row => p.printf(\"{%s}%s\", row, CrLf) }\n",
+    "}\n",
+    "\n",
+    "trait LineSeparator { def value: String }\n",
+    "class CrLf extends LineSeparator { val value = \"\\r\\n\" }\n",
+    "class Lf extends LineSeparator { val value = \"\\n\" }\n",
+    "\n",
+    "class Records2(private val all: List[String], private val sep: LineSeparator) {\n",
+    "  def write(out: java.io.Writer): Unit = {\n",
+    "    all.foreach { rec =>\n",
+    "      out.write(rec)\n",
+    "      out.write(sep.value)\n",
+    "    }\n",
+    "  }\n",
+    "}\n"
+   ],
+   "id": "68aff711771c12d6"
   }
  ],
  "metadata": {
