--- a/elegant-objects/src/main/scala/chapter2.ipynb
+++ b/elegant-objects/src/main/scala/chapter2.ipynb
@@ -576,9 +576,63 @@
     "      out.write(sep.value)\n",
     "    }\n",
     "  }\n",
-    "}\n"
+    "}"
    ],
-   "id": "68aff711771c12d6"
+   "id": "aa62aa428afa58f2"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 2.5.1 Introduction of coupling\n",
+    "\n",
+    "Public constants introduce hidden, hard-coded dependencies. When multiple classes reach out to a shared global value, they become tightly coupled to it and to each other, making behavior changes unpredictable.\n",
+    "\n",
+    "Consider these two classes that both rely on a shared line separator constant:\n"
+   ],
+   "id": "c861b7d0fcac6d12"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "// Bad: shared global constant couples unrelated classes to the same value\n",
+    "object ConstantsGlobal {\n",
+    "  val CrLf: String = \"\\r\\n\"\n",
+    "}\n",
+    "\n",
+    "class RecordsCoupled(private val all: List[String]) {\n",
+    "  def write(out: java.io.Writer): Unit = {\n",
+    "    all.foreach { rec =>\n",
+    "      out.write(rec)\n",
+    "      out.write(ConstantsGlobal.CrLf) // hard dependency here\n",
+    "    }\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class RowsCoupled(private val all: List[String]) {\n",
+    "  def print(p: java.io.PrintStream): Unit = {\n",
+    "    all.foreach { row =>\n",
+    "      p.printf(\"{%s}%s\", row, ConstantsGlobal.CrLf) // and here\n",
+    "    }\n",
+    "  }\n",
+    "}"
+   ],
+   "id": "a7b04438572d8d3e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Now, RecordsCoupled.write, RowsCoupled.print, and ConstantsGlobal.CrLf are all coupled. If we change CrLf (for example, to a platform-specific or protocol-specific value), the behavior of both classes changes, and it’s unclear whether those changes are acceptable. One user may be printing to the console, while another may be composing an HTTP message where the line ending is mandated and must not change.\n",
+    "\n",
+    "The constant sits in a global scope without semantic context. We can’t tell how it’s used or which usages are safe to alter. This erodes maintainability: many objects depend on a value whose meaning varies by context.\n",
+    "\n",
+    "A better design is to inject small objects that carry the context (as shown above with LineSeparator and Records2/Rows2), so each class depends on what it needs, and changes are localized.\n"
+   ],
+   "id": "3695d7987cb43a44"
   }
  ],
  "metadata": {
