--- a/elegant-objects/src/main/scala/chapter2.ipynb
+++ b/elegant-objects/src/main/scala/chapter2.ipynb
@@ -593,10 +593,12 @@
    "id": "c861b7d0fcac6d12"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "// Bad: shared global constant couples unrelated classes to the same value\n",
     "object ConstantsGlobal {\n",
@@ -620,7 +622,9 @@
     "  }\n",
     "}"
    ],
-   "id": "a7b04438572d8d3e"
+   "id": "a7b04438572d8d3e",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -632,7 +636,128 @@
     "\n",
     "A better design is to inject small objects that carry the context (as shown above with LineSeparator and Records2/Rows2), so each class depends on what it needs, and changes are localized.\n"
    ],
-   "id": "3695d7987cb43a44"
+   "id": "19686020036e96b3"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 2.5.2 Loss of cohesion\n",
+    "\n",
+    "Public constants push unrelated semantics into consumers. Records and Rows shouldn’t know how to apply a line ending; that’s a separate responsibility. Instead of sharing a naked value, share behavior with a tiny object that owns the meaning of the value.\n",
+    "\n",
+    "Key ideas:\n",
+    "- Don’t share data, share behavior (micro classes).\n",
+    "- Couple through contracts, not through globals.\n",
+    "- Semantics live with the object that knows them.\n"
+   ],
+   "id": "8da822bc78ae0516"
+  },
+  {
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "// A tiny object that owns the semantics of “append CRLF to a line”\n",
+    "final class CRLFString(private val origin: String) {\n",
+    "  override def toString: String = s\"$origin\\r\\n\"\n",
+    "  def value: String = toString // explicit, useful for Writer.write(String)\n",
+    "}\n",
+    "\n",
+    "// Usage in code that writes records (no constant, no formatting logic here)\n",
+    "final class Records3(private val all: List[String]) {\n",
+    "  def write(out: java.io.Writer): Unit =\n",
+    "    all.foreach { rec =>\n",
+    "      out.write(CRLFString(rec).value)\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "object CRLFString {\n",
+    "  def apply(origin: String): CRLFString = new CRLFString(origin)\n",
+    "}\n"
+   ],
+   "id": "d8b888c37d3df85b",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "// Usage in code that prints rows (PrintStream can print any object via toString)\n",
+    "final class Rows3(private val all: List[String]) {\n",
+    "  def print(p: java.io.PrintStream): Unit =\n",
+    "    all.foreach { row =>\n",
+    "      p.print(new CRLFString(s\"{$row}\"))\n",
+    "    }\n",
+    "}\n"
+   ],
+   "id": "384eec1c651c99b3"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Platform-aware behavior stays encapsulated in the same micro class. The contract doesn’t change; only behavior does.\n",
+   "id": "7bda00611e16bde7"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "final class SafeCRLFString(private val origin: String) {\n",
+    "  override def toString: String = {\n",
+    "    val os = java.lang.System.getProperty(\"os.name\", \"\").toLowerCase\n",
+    "    if (os.contains(\"win\"))\n",
+    "      throw new IllegalStateException(\"We're on Windows, can't use CRLF, sorry\")\n",
+    "    s\"$origin\\r\\n\"\n",
+    "  }\n",
+    "  def value: String = toString\n",
+    "}\n",
+    "\n",
+    "object SafeCRLFString {\n",
+    "  def apply(origin: String): SafeCRLFString = new SafeCRLFString(origin)\n",
+    "}\n"
+   ],
+   "id": "31649c5a99bef0f9"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Another example: replace HTTP method constants with tiny classes that configure a request.\n",
+   "id": "65adba77fc78cc4b"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "// A very small HTTP request stub; the method is part of its state\n",
+    "trait Request { def fetch(): String }\n",
+    "\n",
+    "final class HttpRequest extends Request {\n",
+    "  private var method: String = \"GET\"\n",
+    "  def withMethod(m: String): HttpRequest = { method = m; this }\n",
+    "  override def fetch(): String = s\"Fetched with method=$method\"\n",
+    "}\n",
+    "\n",
+    "// Instead of HttpMethods.POST constant, use a tiny configurator object\n",
+    "final class PostRequest(private val origin: HttpRequest) extends Request {\n",
+    "  override def fetch(): String = origin.withMethod(\"POST\").fetch()\n",
+    "}\n",
+    "\n",
+    "// Usage\n",
+    "val bodyViaPost: String = new PostRequest(new HttpRequest).fetch()\n",
+    "\n"
+   ],
+   "id": "e2432f1e0eae128a"
   }
  ],
  "metadata": {
