--- a/elegant-objects/src/main/scala/chapter2.ipynb
+++ b/elegant-objects/src/main/scala/chapter2.ipynb
@@ -507,13 +507,10 @@
    "id": "f25e28edeacbc292"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-08-28T13:29:52.372648Z",
-     "start_time": "2025-08-28T13:29:49.216Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "// Bad example: global constant-like object (avoid)\n",
     "object ConstantsBad {\n",
@@ -522,25 +519,11 @@
     "\n",
     "class RowsBad2(private val all: List[String]) {\n",
     "  def print(p: java.io.PrintStream): Unit = {\n",
-    "    all.foreach { row => p.printf(\"{%s}%s\", row, ConstantsBad.CrLf) }\n",
+    "    all.foreach { row => p.print(s\"{$row}${ConstantsBad.CrLf}\") }\n",
     "  }\n",
     "}"
    ],
-   "id": "54ee1a9748dea62b",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defined \u001B[32mobject\u001B[39m \u001B[36mConstantsBad\u001B[39m\n",
-       "defined \u001B[32mclass\u001B[39m \u001B[36mRowsBad2\u001B[39m"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 1
+   "id": "6b1190d0da3ddecf"
   },
   {
    "metadata": {},
@@ -562,7 +545,7 @@
     "class Rows2(private val all: List[String]) {\n",
     "  private val CrLf: String = \"\\r\\n\"\n",
     "  def print(p: java.io.PrintStream): Unit =\n",
-    "    all.foreach { row => p.printf(\"{%s}%s\", row, CrLf) }\n",
+    "    all.foreach { row => p.print(s\"{$row}$CrLf\") }\n",
     "}\n",
     "\n",
     "trait LineSeparator { def value: String }\n",
@@ -578,7 +561,7 @@
     "  }\n",
     "}"
    ],
-   "id": "aa62aa428afa58f2"
+   "id": "723b0db76db4724e"
   },
   {
    "metadata": {},
@@ -593,12 +576,10 @@
    "id": "c861b7d0fcac6d12"
   },
   {
-   "metadata": {
-    "jupyter": {
-     "is_executing": true
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "// Bad: shared global constant couples unrelated classes to the same value\n",
     "object ConstantsGlobal {\n",
@@ -617,14 +598,12 @@
     "class RowsCoupled(private val all: List[String]) {\n",
     "  def print(p: java.io.PrintStream): Unit = {\n",
     "    all.foreach { row =>\n",
-    "      p.printf(\"{%s}%s\", row, ConstantsGlobal.CrLf) // and here\n",
+    "      p.print(s\"{$row}${ConstantsGlobal.CrLf}\")\n",
     "    }\n",
     "  }\n",
     "}"
    ],
-   "id": "a7b04438572d8d3e",
-   "outputs": [],
-   "execution_count": null
+   "id": "f19033c98a9765dd"
   },
   {
    "metadata": {},
