elegant objects, fixes

--- a/elegant-objects/src/main/scala/chapter2.ipynb
+++ b/elegant-objects/src/main/scala/chapter2.ipynb
@@ -10,15 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "f050769f4eb1a6a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-25T10:31:13.112220Z",
-     "start_time": "2025-06-25T10:31:12.820940Z"
+     "end_time": "2025-09-03T10:40:32.143007Z",
+     "start_time": "2025-09-03T10:40:31.091592Z"
     }
    },
-   "outputs": [],
    "source": [
     "class Color(str: String = \"\")\n",
     "\n",
@@ -30,7 +28,22 @@
     "\n",
     "val center = new Pixel(50, 50)\n",
     "center.paint(new Color(\"red\"))"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mColor\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mPixel\u001B[39m\n",
+       "\u001B[36mcenter\u001B[39m: \u001B[32mPixel\u001B[39m = ammonite.$sess.cmd1$Helper$Pixel@34998709"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -90,32 +103,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "45a18c1cea944fd0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T23:05:07.040222Z",
-     "start_time": "2025-06-24T23:05:06.041173Z"
+     "end_time": "2025-09-03T10:40:41.567858Z",
+     "start_time": "2025-09-03T10:40:40.807819Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defined \u001B[32mclass\u001B[39m \u001B[36mDocumentProblem\u001B[39m\n",
-       "defined \u001B[32mclass\u001B[39m \u001B[36mDocument\u001B[39m\n",
-       "defined \u001B[32mclass\u001B[39m \u001B[36mOutputPipe\u001B[39m\n",
-       "\u001B[36mdoc\u001B[39m: \u001B[32mDocument\u001B[39m = ammonite.$sess.cmd1$Helper$Document@58e67ec3\n",
-       "\u001B[36mpipe\u001B[39m: \u001B[32mOutputPipe\u001B[39m = ammonite.$sess.cmd1$Helper$OutputPipe@3a133558\n",
-       "\u001B[36mbytesWritten\u001B[39m: \u001B[32mInt\u001B[39m = \u001B[32m42\u001B[39m\n",
-       "\u001B[36mtimeElapsed\u001B[39m: \u001B[32mLong\u001B[39m = \u001B[32m123L\u001B[39m"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "// Problem: This violates our principle - a manipulator returning a value\n",
     "class DocumentProblem {\n",
@@ -154,7 +148,26 @@
     "pipe.write(new java.io.ByteArrayInputStream(\"Hello\".getBytes))\n",
     "val bytesWritten = pipe.bytes\n",
     "val timeElapsed = pipe.time"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mDocumentProblem\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mDocument\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mOutputPipe\u001B[39m\n",
+       "\u001B[36mdoc\u001B[39m: \u001B[32mDocument\u001B[39m = ammonite.$sess.cmd2$Helper$Document@69ee3a5e\n",
+       "\u001B[36mpipe\u001B[39m: \u001B[32mOutputPipe\u001B[39m = ammonite.$sess.cmd2$Helper$OutputPipe@6d2ee5ef\n",
+       "\u001B[36mbytesWritten\u001B[39m: \u001B[32mInt\u001B[39m = \u001B[32m42\u001B[39m\n",
+       "\u001B[36mtimeElapsed\u001B[39m: \u001B[32mLong\u001B[39m = \u001B[32m123L\u001B[39m"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -176,14 +189,16 @@
    ]
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-03T10:46:55.602750Z",
+     "start_time": "2025-09-03T10:46:54.848895Z"
+    }
+   },
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e623cb6fab8c0254",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "// Builder Pattern example (though the author recommends against it)\n",
-    "class Book private (\n",
+    "class Book (\n",
     "  val author: String = \"\",\n",
     "  val title: String = \"\",\n",
     "  val pages: List[String] = List.empty\n",
@@ -206,7 +221,22 @@
     "  .withAuthor(\"John Doe\")\n",
     "  .withTitle(\"Clean Code\")\n",
     "  .withPage(\"Chapter 1\")"
-   ]
+   ],
+   "id": "3d54dff8f73afc16",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mBook\u001B[39m\n",
+       "\u001B[36mmyBook\u001B[39m: \u001B[32mBook\u001B[39m = ammonite.$sess.cmd4$Helper$Book@18ef9967"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -286,41 +316,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "7c89279a78570d0c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-25T11:12:02.884720Z",
-     "start_time": "2025-06-25T11:12:02.385850Z"
+     "end_time": "2025-09-03T10:47:29.063913Z",
+     "start_time": "2025-09-03T10:47:28.335339Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Executing SELECT * FROM users on jdbc:postgresql://localhost:5432/mydb\n",
-      "Connection closed\n",
-      "Executed 42 queries\n",
-      "Connection time: 1000ms\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "defined \u001B[32mclass\u001B[39m \u001B[36mDatabase\u001B[39m\n",
-       "defined \u001B[32mclass\u001B[39m \u001B[36mConnection\u001B[39m\n",
-       "defined \u001B[32mclass\u001B[39m \u001B[36mStatistics\u001B[39m\n",
-       "\u001B[36mdb\u001B[39m: \u001B[32mDatabase\u001B[39m = ammonite.$sess.cmd2$Helper$Database@87065b0\n",
-       "\u001B[36mconn\u001B[39m: \u001B[32mConnection\u001B[39m = ammonite.$sess.cmd2$Helper$Connection@13a93ecd\n",
-       "\u001B[36mstats\u001B[39m: \u001B[32mStatistics\u001B[39m = ammonite.$sess.cmd2$Helper$Statistics@6aacd07a"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "// Example: Managing a database connection\n",
     "class Database(url: String) {\n",
@@ -370,7 +372,35 @@
     "val stats = db.stats\n",
     "println(s\"Executed ${stats.queryCount} queries\")\n",
     "println(s\"Connection time: ${stats.connectionTime}ms\")\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executing SELECT * FROM users on jdbc:postgresql://localhost:5432/mydb\n",
+      "Connection closed\n",
+      "Executed 42 queries\n",
+      "Connection time: 1000ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mDatabase\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mConnection\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mStatistics\u001B[39m\n",
+       "\u001B[36mdb\u001B[39m: \u001B[32mDatabase\u001B[39m = ammonite.$sess.cmd5$Helper$Database@7e2ce878\n",
+       "\u001B[36mconn\u001B[39m: \u001B[32mConnection\u001B[39m = ammonite.$sess.cmd5$Helper$Connection@194543a4\n",
+       "\u001B[36mstats\u001B[39m: \u001B[32mStatistics\u001B[39m = ammonite.$sess.cmd5$Helper$Statistics@6d254bb0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -387,8 +417,8 @@
    "id": "852b19bb47926733",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T13:06:26.345514Z",
-     "start_time": "2025-08-28T13:06:25.052629Z"
+     "end_time": "2025-09-03T11:05:30.869559Z",
+     "start_time": "2025-09-03T11:05:29.996595Z"
     }
    },
    "source": [
@@ -462,17 +492,17 @@
       "text/plain": [
        "defined \u001B[32mclass\u001B[39m \u001B[36mFile\u001B[39m\n",
        "defined \u001B[32mclass\u001B[39m \u001B[36mUser\u001B[39m\n",
-       "\u001B[36mfile\u001B[39m: \u001B[32mFile\u001B[39m = ammonite.$sess.cmd1$Helper$File@782f660d\n",
+       "\u001B[36mfile\u001B[39m: \u001B[32mFile\u001B[39m = ammonite.$sess.cmd6$Helper$File@7ef5dca2\n",
        "\u001B[36muser\u001B[39m: \u001B[32mUser\u001B[39m = \u001B[33mUser\u001B[39m(name = \u001B[32m\"John\"\u001B[39m, age = \u001B[32m25\u001B[39m)\n",
        "\u001B[36motherUser\u001B[39m: \u001B[32mUser\u001B[39m = \u001B[33mUser\u001B[39m(name = \u001B[32m\"Jane\"\u001B[39m, age = \u001B[32m30\u001B[39m)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -507,10 +537,13 @@
    "id": "f25e28edeacbc292"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-03T11:15:45.703637Z",
+     "start_time": "2025-09-03T11:15:45.147494Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "// Bad example: global constant-like object (avoid)\n",
     "object ConstantsBad {\n",
@@ -519,11 +552,25 @@
     "\n",
     "class RowsBad2(private val all: List[String]) {\n",
     "  def print(p: java.io.PrintStream): Unit = {\n",
-    "    all.foreach { row => p.print(s\"{$row}${ConstantsBad.CrLf}\") }\n",
+    "    all.foreach { row => p.print(s\"$row${ConstantsBad.CrLf}\") }\n",
     "  }\n",
     "}"
    ],
-   "id": "6b1190d0da3ddecf"
+   "id": "6b1190d0da3ddecf",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mobject\u001B[39m \u001B[36mConstantsBad\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mRowsBad2\u001B[39m"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -537,15 +584,18 @@
    "id": "3445e185568f9dba"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-03T11:15:49.664218Z",
+     "start_time": "2025-09-03T11:15:49.129838Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "class Rows2(private val all: List[String]) {\n",
     "  private val CrLf: String = \"\\r\\n\"\n",
     "  def print(p: java.io.PrintStream): Unit =\n",
-    "    all.foreach { row => p.print(s\"{$row}$CrLf\") }\n",
+    "    all.foreach { row => p.print(s\"$row$CrLf\") }\n",
     "}\n",
     "\n",
     "trait LineSeparator { def value: String }\n",
@@ -561,7 +611,24 @@
     "  }\n",
     "}"
    ],
-   "id": "723b0db76db4724e"
+   "id": "723b0db76db4724e",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mRows2\u001B[39m\n",
+       "defined \u001B[32mtrait\u001B[39m \u001B[36mLineSeparator\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mCrLf\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mLf\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mRecords2\u001B[39m"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 12
   },
   {
    "metadata": {},
@@ -576,10 +643,13 @@
    "id": "c861b7d0fcac6d12"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-03T11:19:37.286610Z",
+     "start_time": "2025-09-03T11:19:36.620294Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "// Bad: shared global constant couples unrelated classes to the same value\n",
     "object ConstantsGlobal {\n",
@@ -598,12 +668,27 @@
     "class RowsCoupled(private val all: List[String]) {\n",
     "  def print(p: java.io.PrintStream): Unit = {\n",
     "    all.foreach { row =>\n",
-    "      p.print(s\"{$row}${ConstantsGlobal.CrLf}\")\n",
+    "      p.print(s\"$row${ConstantsGlobal.CrLf}\") // hard dependency here\n",
     "    }\n",
     "  }\n",
     "}"
    ],
-   "id": "f19033c98a9765dd"
+   "id": "f19033c98a9765dd",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mobject\u001B[39m \u001B[36mConstantsGlobal\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mRecordsCoupled\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mRowsCoupled\u001B[39m"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -634,49 +719,84 @@
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2025-09-03T11:32:46.512688Z",
+     "start_time": "2025-09-03T11:32:45.755960Z"
     }
    },
    "cell_type": "code",
    "source": [
     "// A tiny object that owns the semantics of “append CRLF to a line”\n",
-    "final class CRLFString(private val origin: String) {\n",
+    "final case class CRLFString(private val origin: String) {\n",
     "  override def toString: String = s\"$origin\\r\\n\"\n",
-    "  def value: String = toString // explicit, useful for Writer.write(String)\n",
     "}\n",
     "\n",
     "// Usage in code that writes records (no constant, no formatting logic here)\n",
     "final class Records3(private val all: List[String]) {\n",
     "  def write(out: java.io.Writer): Unit =\n",
     "    all.foreach { rec =>\n",
-    "      out.write(CRLFString(rec).value)\n",
+    "      out.write(CRLFString(rec))\n",
     "    }\n",
-    "}\n",
-    "\n",
-    "object CRLFString {\n",
-    "  def apply(origin: String): CRLFString = new CRLFString(origin)\n",
     "}\n"
    ],
    "id": "d8b888c37d3df85b",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mCRLFString\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mRecords3\u001B[39m"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 23
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-03T11:35:48.802706Z",
+     "start_time": "2025-09-03T11:35:47.943657Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "// Usage in code that prints rows (PrintStream can print any object via toString)\n",
     "final class Rows3(private val all: List[String]) {\n",
     "  def print(p: java.io.PrintStream): Unit =\n",
     "    all.foreach { row =>\n",
-    "      p.print(new CRLFString(s\"{$row}\"))\n",
+    "      p.print(CRLFString(row))\n",
     "    }\n",
-    "}\n"
+    "}\n",
+    "\n",
+    "private val rows = new Rows3(List(\"row1\", \"row2\"))\n",
+    "rows.print(System.out) // prints with CRLF\n"
    ],
-   "id": "384eec1c651c99b3"
+   "id": "384eec1c651c99b3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "row1\r\n",
+      "row2\r\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mRows3\u001B[39m"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 25
   },
   {
    "metadata": {},
@@ -685,10 +805,13 @@
    "id": "7bda00611e16bde7"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-03T11:48:08.565738Z",
+     "start_time": "2025-09-03T11:48:07.990146Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "final class SafeCRLFString(private val origin: String) {\n",
     "  override def toString: String = {\n",
@@ -697,14 +820,27 @@
     "      throw new IllegalStateException(\"We're on Windows, can't use CRLF, sorry\")\n",
     "    s\"$origin\\r\\n\"\n",
     "  }\n",
-    "  def value: String = toString\n",
     "}\n",
     "\n",
     "object SafeCRLFString {\n",
     "  def apply(origin: String): SafeCRLFString = new SafeCRLFString(origin)\n",
     "}\n"
    ],
-   "id": "31649c5a99bef0f9"
+   "id": "31649c5a99bef0f9",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mSafeCRLFString\u001B[39m\n",
+       "defined \u001B[32mobject\u001B[39m \u001B[36mSafeCRLFString\u001B[39m"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 29
   },
   {
    "metadata": {},
@@ -713,10 +849,13 @@
    "id": "65adba77fc78cc4b"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-03T11:58:58.347183Z",
+     "start_time": "2025-09-03T11:58:57.223850Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "// A very small HTTP request stub; the method is part of its state\n",
     "trait Request { def fetch(): String }\n",
@@ -736,7 +875,23 @@
     "val bodyViaPost: String = new PostRequest(new HttpRequest).fetch()\n",
     "\n"
    ],
-   "id": "e2432f1e0eae128a"
+   "id": "e2432f1e0eae128a",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mtrait\u001B[39m \u001B[36mRequest\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mHttpRequest\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mPostRequest\u001B[39m\n",
+       "\u001B[36mbodyViaPost\u001B[39m: \u001B[32mString\u001B[39m = \u001B[32m\"Fetched with method=POST\"\u001B[39m"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 31
   }
  ],
  "metadata": {
